# ComfyUI-PromptPalette-F

./: .comfyignore  .gitignore  CLAUDE.md  README.md  __init__.py  nodes.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.mts
.github/workflows/: publish.yml
src/: main.ts
src/components/: GroupControls.vue  PhraseRow.vue  PreviewPanel.vue  PromptPaletteWidget.vue  TestWidget.vue
tests/: test_nodes.py
web/: gemma_image_prompt.js  gemma_translate.js  index.js  node_value_template.js  prompt_tabs.js  prompt_tabs_translate.js
