[project]
name = "promptpalette-f"
version = "2.0.0"
description = "An interactive prompt editing interface with checkbox-based phrase toggling, weight adjustment controls, and group management for ComfyUI. V3 API compliant with Nodes 2.0 basic support."
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/id-fa/ComfyUI-PromptPalette-F"

[tool.comfy]
PublisherId = "id-fa"
DisplayName = "PromptPalette-F"
