[project]
name = "prompt-palette-f"
version = "2.6.1"
description = "A ComfyUI custom node pack for interactive prompt building with checkbox toggling, weight control, and prompt utilities."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent"
]
dependencies = [
    "googletrans"
]

[project.urls]
Repository = "https://github.com/id-fa/ComfyUI-PromptPalette-F"

[tool.comfy]
PublisherId = "id-fa"
DisplayName = "Prompt Palette-F"
Icon = "https://raw.githubusercontent.com/id-fa/ComfyUI-PromptPalette-F/refs/heads/main/examples/prompt_palette_f_icon.png"
Banner = "https://raw.githubusercontent.com/id-fa/ComfyUI-PromptPalette-F/refs/heads/main/examples/prompt_palette_f_banner.png"
Tags = []
Repository = "https://github.com/id-fa/ComfyUI-PromptPalette-F"
includes = []
